--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elzero</title>
+    <title>Ayoub</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/elzero.css" />
     <!-- Font Awesome -->
@@ -18,7 +18,7 @@
     <!-- Start Header -->
     <div class="header" id="header">
       <div class="container">
-        <a href="#" class="logo">Elzero</a>
+        <a href="#" class="logo">Ayoub</a>
         <ul class="main-nav">
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -882,7 +882,7 @@
         <div class="box">
           <div class="line">
             <i class="fas fa-map-marker-alt fa-fw"></i>
-            <div class="info">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
+            <div class="info">Morocco, my adresse, Room Number 220</div>
           </div>
           <div class="line">
             <i class="far fa-clock fa-fw"></i>
